# cppeng

./: .gitignore  CMakeLists.txt  readme.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
include/engine/: Engine.h  EngineGL.js.h  EngineMain.h  Objects.h
lib/: inja.hpp
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: EngImage.cpp  EngImage.h  EngMath.cpp  EngMath.h  EngTypes.h  Engine.cpp  Engine.h  EngineGL.cpp  EngineGL.h  EngineMain.cpp  EngineMain.h  IGame.h  Logging.h  Objects.h  Resources.cpp  Resources.h
src/common/: ICleanable.h  ICleanableObserver.h
src/loader/: HierarchyLoader.cpp  HierarchyLoader.h  ModelLoader.cpp  ModelLoader.h  ModelLoaderUtils.cpp  ModelLoaderUtils.h  ShaderLoader.cpp  ShaderLoader.h  SpritesheetLoader.cpp  SpritesheetLoader.h  TextureLoader.cpp  TextureLoader.h
src/objects/: Camera.cpp  Camera.h  LightObject.cpp  LightObject.h  MeshObject.cpp  MeshObject.h  Projector.cpp  Projector.h  SkinnedMeshObject.cpp  SkinnedMeshObject.h  Terrain.cpp  Terrain.h
src/render/: Mesh.cpp  Mesh.h
src/render/buffer/: FrameBufferObject.cpp  FrameBufferObject.h  MemoryBuffer.cpp  MemoryBuffer.h  MultiVBOAddress.h  MultiVertexBufferObject.cpp  MultiVertexBufferObject.h  TextureBufferObject.cpp  TextureBufferObject.h  UniformBufferObject.cpp  UniformBufferObject.h  VertexBufferObject.cpp  VertexBufferObject.h
src/render/debug/: DebugDraw.cpp  DebugDraw.h
src/render/effect/: PostEffect.cpp  PostEffect.h
src/render/lighting/: LightGrid.cpp  LightGrid.h
src/render/material/: Material.cpp  Material.h  MaterialBinding.cpp  MaterialBinding.h  MaterialTypes.cpp  MaterialTypes.h
src/render/mesh/: Mesh.cpp  Mesh.h
src/render/renderer/: GlobalState.cpp  GlobalState.h  ICameraParamsProvider.h  IRenderer.h  RenderOperation.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  UBOManager.cpp  UBOManager.h  View.cpp  View.h
src/render/shader/: Shader.cpp  Shader.h  ShaderCaps.cpp  ShaderCaps.h  ShaderGenerator.cpp  ShaderGenerator.h  Uniform.cpp  Uniform.h  UniformBinding.h  UniformBufferStruct.h
src/render/shading/: LightGrid.cpp  LightGrid.h  ShadowMap.cpp  ShadowMap.h
src/render/texture/: SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h  TextureSlot.h
src/resources/: HierarchyData.cpp  HierarchyData.h  ModelBundle.cpp  ModelBundle.h  SkinningData.cpp  SkinningData.h
src/scene/: AnimationController.cpp  AnimationController.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
src/system/: Input.cpp  Input.h  Logging.h  Window.cpp  Window.h
src/utils/: Frustum.h  Math.cpp  Math.h  MeshGeneration.cpp  MeshGeneration.h  Performance.cpp  Performance.h
tests/: catch.hpp  test_camera.cpp  test_caps.cpp  test_main.cpp  test_scene.cpp
